library/src/libqtextobject.h

typedef QTextBlock::iterator QTextBlock__iterator;
typedef QTextFrame::iterator QTextFrame__iterator;
typedef struct QTextBlock QTextBlock;
typedef struct QTextBlock__iterator QTextBlock__iterator;
typedef struct QTextFragment QTextFragment;
typedef struct QTextFrame QTextFrame;
typedef struct QTextFrame__iterator QTextFrame__iterator;
QTextFrame__iterator* QTextFrame__iterator_new(QTextFrame__iterator* other);
QTextFrame__iterator* QTextFrame__iterator_new2(QTextFrame__iterator* other);
QTextFrame__iterator* QTextFrame__iterator_new3();
QTextFrame__iterator* QTextFrame__iterator_new4(QTextFrame__iterator* param1);
QTextFrame* QTextFrame__iterator_ParentFrame(const QTextFrame__iterator* self);
QTextFrame* QTextFrame__iterator_CurrentFrame(const QTextFrame__iterator* self);
QTextBlock* QTextFrame__iterator_CurrentBlock(const QTextFrame__iterator* self);
bool QTextFrame__iterator_AtEnd(const QTextFrame__iterator* self);
bool QTextFrame__iterator_OperatorEqual(const QTextFrame__iterator* self, QTextFrame__iterator* o);
bool QTextFrame__iterator_OperatorNotEqual(const QTextFrame__iterator* self, QTextFrame__iterator* o);
QTextFrame__iterator* QTextFrame__iterator_OperatorPlusPlus(QTextFrame__iterator* self);
QTextFrame__iterator* QTextFrame__iterator_OperatorPlusPlusWithInt(QTextFrame__iterator* self, int param1);
QTextFrame__iterator* QTextFrame__iterator_OperatorMinusMinus(QTextFrame__iterator* self);
QTextFrame__iterator* QTextFrame__iterator_OperatorMinusMinusWithInt(QTextFrame__iterator* self, int param1);
void QTextFrame__iterator_Delete(QTextFrame__iterator* self);
QTextBlock__iterator* QTextBlock__iterator_new(QTextBlock__iterator* other);
QTextBlock__iterator* QTextBlock__iterator_new2(QTextBlock__iterator* other);
QTextBlock__iterator* QTextBlock__iterator_new3();
QTextBlock__iterator* QTextBlock__iterator_new4(QTextBlock__iterator* param1);
QTextFragment* QTextBlock__iterator_Fragment(const QTextBlock__iterator* self);
bool QTextBlock__iterator_AtEnd(const QTextBlock__iterator* self);
bool QTextBlock__iterator_OperatorEqual(const QTextBlock__iterator* self, QTextBlock__iterator* o);
bool QTextBlock__iterator_OperatorNotEqual(const QTextBlock__iterator* self, QTextBlock__iterator* o);
QTextBlock__iterator* QTextBlock__iterator_OperatorPlusPlus(QTextBlock__iterator* self);
QTextBlock__iterator* QTextBlock__iterator_OperatorPlusPlusWithInt(QTextBlock__iterator* self, int param1);
QTextBlock__iterator* QTextBlock__iterator_OperatorMinusMinus(QTextBlock__iterator* self);
QTextBlock__iterator* QTextBlock__iterator_OperatorMinusMinusWithInt(QTextBlock__iterator* self, int param1);
void QTextBlock__iterator_Delete(QTextBlock__iterator* self);