src/qt/libqtextobject.bf

extension CQt
{
	[LinkName("QTextFrame__iterator_new")]
	public static extern void* QTextFrame__iterator_new(QTextFrame__iterator* other);
	[LinkName("QTextFrame__iterator_new2")]
	public static extern void* QTextFrame__iterator_new2(QTextFrame__iterator* other);
	[LinkName("QTextFrame__iterator_new3")]
	public static extern void* QTextFrame__iterator_new3();
	[LinkName("QTextFrame__iterator_new4")]
	public static extern void* QTextFrame__iterator_new4(QTextFrame__iterator* param1);
	[LinkName("QTextFrame__iterator_ParentFrame")]
	public static extern void* QTextFrame__iterator_ParentFrame(void* c_this);
	[LinkName("QTextFrame__iterator_CurrentFrame")]
	public static extern void* QTextFrame__iterator_CurrentFrame(void* c_this);
	[LinkName("QTextFrame__iterator_CurrentBlock")]
	public static extern void QTextFrame__iterator_CurrentBlock(void* c_this);
	[LinkName("QTextFrame__iterator_AtEnd")]
	public static extern bool QTextFrame__iterator_AtEnd(void* c_this);
	[LinkName("QTextFrame__iterator_OperatorEqual")]
	public static extern bool QTextFrame__iterator_OperatorEqual(void* c_this, QTextFrame__iterator* o);
	[LinkName("QTextFrame__iterator_OperatorNotEqual")]
	public static extern bool QTextFrame__iterator_OperatorNotEqual(void* c_this, QTextFrame__iterator* o);
	[LinkName("QTextFrame__iterator_OperatorPlusPlus")]
	public static extern QTextFrame__iterator* QTextFrame__iterator_OperatorPlusPlus(void* c_this);
	[LinkName("QTextFrame__iterator_OperatorPlusPlusWithInt")]
	public static extern QTextFrame__iterator QTextFrame__iterator_OperatorPlusPlusWithInt(void* c_this, int32 param1);
	[LinkName("QTextFrame__iterator_OperatorMinusMinus")]
	public static extern QTextFrame__iterator* QTextFrame__iterator_OperatorMinusMinus(void* c_this);
	[LinkName("QTextFrame__iterator_OperatorMinusMinusWithInt")]
	public static extern QTextFrame__iterator QTextFrame__iterator_OperatorMinusMinusWithInt(void* c_this, int32 param1);
	/// Delete this object from C++ memory
	[LinkName("QTextFrame__iterator_Delete")]
	public static extern void QTextFrame__iterator_Delete(void* self);
}
public class QTextBlock__iterator
{
	protected void* nativePtr;
	
	public this(QTextBlock__iterator* other)
	{
		this.nativePtr = CQt.QTextBlock__iterator_new(other);
	}
	
	public ~this()
	{
		CQt.QTextBlock__iterator_Delete(this.nativePtr);
	}
	
	public void Fragment()
	{
		CQt.QTextBlock__iterator_Fragment(this.nativePtr);
	}
	
	public bool AtEnd()
	{
		return CQt.QTextBlock__iterator_AtEnd(this.nativePtr);
	}
	
	public bool OperatorEqual(QTextBlock__iterator* o)
	{
		return CQt.QTextBlock__iterator_OperatorEqual(this.nativePtr, o);
	}
	
	public bool OperatorNotEqual(QTextBlock__iterator* o)
	{
		return CQt.QTextBlock__iterator_OperatorNotEqual(this.nativePtr, o);
	}
	
	public QTextBlock__iterator* OperatorPlusPlus()
	{
		return CQt.QTextBlock__iterator_OperatorPlusPlus(this.nativePtr);
	}
	
	public QTextBlock__iterator OperatorPlusPlusWithInt(int32 param1)
	{
		return CQt.QTextBlock__iterator_OperatorPlusPlusWithInt(this.nativePtr, param1);
	}
	
	public QTextBlock__iterator* OperatorMinusMinus()
	{
		return CQt.QTextBlock__iterator_OperatorMinusMinus(this.nativePtr);
	}
	
	public QTextBlock__iterator OperatorMinusMinusWithInt(int32 param1)
	{
		return CQt.QTextBlock__iterator_OperatorMinusMinusWithInt(this.nativePtr, param1);
	}
	
}
extension CQt
{
	[LinkName("QTextBlock__iterator_new")]
	public static extern void* QTextBlock__iterator_new(QTextBlock__iterator* other);
	[LinkName("QTextBlock__iterator_new2")]
	public static extern void* QTextBlock__iterator_new2(QTextBlock__iterator* other);
	[LinkName("QTextBlock__iterator_new3")]
	public static extern void* QTextBlock__iterator_new3();
	[LinkName("QTextBlock__iterator_new4")]
	public static extern void* QTextBlock__iterator_new4(QTextBlock__iterator* param1);
	[LinkName("QTextBlock__iterator_Fragment")]
	public static extern void QTextBlock__iterator_Fragment(void* c_this);
	[LinkName("QTextBlock__iterator_AtEnd")]
	public static extern bool QTextBlock__iterator_AtEnd(void* c_this);
	[LinkName("QTextBlock__iterator_OperatorEqual")]
	public static extern bool QTextBlock__iterator_OperatorEqual(void* c_this, QTextBlock__iterator* o);
	[LinkName("QTextBlock__iterator_OperatorNotEqual")]
	public static extern bool QTextBlock__iterator_OperatorNotEqual(void* c_this, QTextBlock__iterator* o);
	[LinkName("QTextBlock__iterator_OperatorPlusPlus")]
	public static extern QTextBlock__iterator* QTextBlock__iterator_OperatorPlusPlus(void* c_this);
	[LinkName("QTextBlock__iterator_OperatorPlusPlusWithInt")]
	public static extern QTextBlock__iterator QTextBlock__iterator_OperatorPlusPlusWithInt(void* c_this, int32 param1);
	[LinkName("QTextBlock__iterator_OperatorMinusMinus")]
	public static extern QTextBlock__iterator* QTextBlock__iterator_OperatorMinusMinus(void* c_this);
	[LinkName("QTextBlock__iterator_OperatorMinusMinusWithInt")]
	public static extern QTextBlock__iterator QTextBlock__iterator_OperatorMinusMinusWithInt(void* c_this, int32 param1);
	/// Delete this object from C++ memory
	[LinkName("QTextBlock__iterator_Delete")]
	public static extern void QTextBlock__iterator_Delete(void* self);
}